feat: final changes required for inital version
* feat: initial chaos testing Java agent implementation

Multi-module Gradle project with ByteBuddy-based JVM instrumentation
for chaos testing. Includes API with sealed interfaces for selectors
and effects, core runtime with scenario management, JDK instrumentation
via bootstrap bridge pattern, JFR integration, startup config loading,
and integration tests with subprocess-based agent verification.

* feat: implement missing stressors, ClockSkew, ExceptionInjection, ReturnValueCorruption, fix state machine, registry cleanup, maxApplications race, logging levels

- Implement 8 missing ManagedStressor types: MetaspacePressureStressor,
  DirectBufferPressureStressor, GcPressureStressor, FinalizerBacklogStressor,
  DeadlockStressor, ThreadLeakStressor, ThreadLocalLeakStressor,
  MonitorContentionStressor
- Implement ExceptionInjectionEffect runtime via reflection + sneaky-throw
- Implement ReturnValueCorruptionEffect with ReturnValueCorruptor (NULL/ZERO/EMPTY/
  BOUNDARY_MIN/BOUNDARY_MAX strategies, with type-safe fallback and observability)
- Implement ClockSkewEffect runtime with ClockSkewState (FIXED/DRIFT/FREEZE modes,
  atomic drift accumulation, thread-safe frozen timestamp)
- Fix ScenarioController state machine: constructor always initialises to INACTIVE;
  ACTIVE state set exclusively in start()
- Fix maxApplications race: CAS loop prevents counter overshoot under concurrency
- Fix DefaultChaosSession.close(): unregister controllers from ScenarioRegistry to
  prevent unbounded registry growth across test cycles
- Fix ObservabilityBus log levels: APPLIED/RELEASED at FINE, STARTED/STOPPED at INFO
- Fix FailureCategory mapping: ChaosUnsupportedFeatureException maps to
  UNSUPPORTED_RUNTIME, not INVALID_CONFIGURATION
- Fix NamePattern GLOB: pattern pre-compiled and cached via ConcurrentHashMap
- Fix CompatibilityValidator: GateEffect + StressSelector rejected; MethodSelector
  operation types validated against Excepti